# cloudmesh-ai-git

./: .gitignore  .report.html  404.html  CHANGELOG.html  Makefile  README.md  aggregation.html  api.html  index.html  io.html  logging.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  stopwatch.html  sys.html  telemetry.html  time.html  todo.txt  todo.txt~  user.html
.github/workflows/: docs.yml
docs/: API.md  aggregation.md  api.md  io.md  logging.md  stopwatch.md  sys.md  telemetry.md  time.md  user.md
search/: search_index.json
site/: 404.html  api.html  objects.inv
src/cloudmesh/ai/app/: git.yaml
src/cloudmesh/ai/command/: git.py  git_table_config.js  git_table_styles.css  git_view.html  git_view.py
src/cloudmesh_ai_git.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_git.py
